src/objects/Broker_Code__c.object
<CustomObject>
    <description>Stores the commission amounts for each broker by broker code</description>
    <fields>
        <fullName>Broker__c</fullName>
        <description>The broker the record is related to</description>
        <label>Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker Codes</relationshipLabel>
        <relationshipName>Broker_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Broker Code from WHICS</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for External Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Broker Code</label>
    <nameField>
        <label>Broker Code ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>